<resources>
    <string name="app_name">CollegeApp</string>
    <string name="next_button">NEXT</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="intro_skip">Skip</string>
    <string name="get_started">GET STARTED</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="enter_email">Enter e-mail address</string>
    <string name="enter_password">Enter password</string>
    <string name="create_account">Create account</string>
    <string name="enter_username">Enter username</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="registration_successful">Successfully registered</string>
    <string name="registration_failed">Failed to register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_myprofile">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_listFaculties">List of Faculties</string>
    <string name="menu_logout">Log out</string>

    <string name="change_password">Change password</string>
    <string name="old_password">Enter old password</string>
    <string name="new_password">Enter new password</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_content">Write text...</string>
    <string name="confirm">Confirm</string>
    <string name="write_review">Write review</string>
    <string name="channel_name">New review</string>
    <string name="channel_description">New review description</string>
</resources>