<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro_activity.IntroActivity"
    android:background="@color/white">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intro_skip_button"
        android:text="@string/intro_skip"
        android:background="@android:color/transparent"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/view_pager_intro"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        />
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_pager_intro"
        app:layout_constraintTop_toBottomOf="@id/intro_skip_button"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intro_button_next"
        android:text="@string/next_button"
        android:textColor="@color/colorPrimary"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:drawableTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
         />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intro_tab_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="32dp"
        app:tabBackground="@drawable/ic_indicator_selector"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intro_get_started_button"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:background="@color/design_default_color_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="64dp"
        android:padding="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>