<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.review.ReviewListActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="30dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_title_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_content_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/enter_content"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_content_text"
                    android:layout_width="match_parent"
                    android:layout_height="119dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_add_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@color/black"
                android:text="@string/confirm"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_cancel_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:text="@string/cancel"
                android:textColor="@color/white"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>